# CL-compute

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp  opencl_kernels.hpp
kernels/: saxpy.cl
